<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:weightSum="1.0"
    tools:context="alessandro.com.startsecondactivity.MainActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_title"
        android:textSize="25dp"
        android:paddingLeft="5dp"
        android:gravity="center_horizontal"
        android:textColor="@color/background"
        />
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="450dp">
        <TableRow
            android:paddingBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Email" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/register_email_visitor"
                android:layout_weight="1"
                android:hint="@string/Email_hint" />
        </TableRow>

        <TableRow
            android:paddingBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:text="@string/Password_TextView"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/register_password_visitor"
                android:layout_column="1"
                android:hint="@string/password_hint"/>
        </TableRow>

        <TableRow
            android:paddingBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Name"
                android:layout_column="0" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="14"
                android:id="@+id/register_name_visitor"
                android:layout_column="1"
                android:hint="@string/name_hint" />
        </TableRow>

        <TableRow
            android:paddingBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/surname"
                android:layout_column="0" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/register_surname_visitor"
                android:layout_column="1"
                android:hint="@string/surname_hint"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terms_label"
                android:id="@+id/checkBox_visitor"
                android:layout_column="0"
                android:layout_span="2"
                android:checked="false" />
        </TableRow>


    </TableLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu"
            android:id="@+id/register_menu_visitor"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="0dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="0dp"
            android:background="@color/background"
            android:textColor="@android:color/white"
            />

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:id="@+id/register_register_visitor"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="215dp"
            android:background="@color/background"
            android:textColor="@android:color/white"/>
    </RelativeLayout>
</LinearLayout>
