<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:id="@+id/root">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_hamburger"
            android:background="@color/background"
            style="@style/Toolbar"
            app:contentInsetStart="0dp">

            <ImageView
                android:id="@+id/content_hamburger"
                style="@style/ImageView.Hamburger"
                android:src="@drawable/ic_menu_black"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/relations"
                android:textColor="@android:color/black"
                android:layout_gravity="center"
                android:textSize="30dp"/>

        </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.73">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="1">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:weightSum="1">

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:text="@string/contact"
                    android:id="@+id/follow_contact_btn"
                    android:backgroundTint="@color/background"/>

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:text="@string/message_btn"
                    android:id="@+id/follow_message_btn"
                    android:backgroundTint="@color/background"
                    />
            </LinearLayout>

            <ListView
                android:layout_width="wrap_content"
                android:layout_height="297dp"
                android:id="@+id/follow_userlist_lv"
                android:layout_weight="0.92"
                />

        </LinearLayout>

    </LinearLayout>

        <LinearLayout
            android:background="#F4C430"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_gravity="bottom"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/background">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar_bottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <ImageButton
                    android:src="@drawable/ic_home_white_24dp_xhdpi"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginRight="8dp"
                    android:background="?selectableItemBackground"
                    android:id="@+id/home"/>
                <ImageButton
                    android:src="@drawable/ic_search_white_24dp_xhdpi"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:layout_marginRight="48dp"
                    android:background="?selectableItemBackground"
                    android:id="@+id/search" />
                <ImageButton
                    android:src="@drawable/ic_message_white_24dp_xhdpi"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:layout_marginRight="8dp"
                    android:background="?selectableItemBackground"
                    android:id="@+id/relation"/>
                <ImageView
                    android:id="@+id/messages"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="25dp"
                    android:src="@drawable/ic_filter_1_white_24dp"/>
                <ImageButton
                    android:src="@drawable/ic_person_white_24dp_xhdpi"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="end"
                    android:layout_marginRight="18dp"
                    android:background="?selectableItemBackground"
                    android:id="@+id/profile" />
            </android.support.v7.widget.Toolbar>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>